# norwegianblue

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  RELEASING.md  pyproject.toml  requirements-mypy.txt  requirements.txt  setup.cfg  setup.py  todo.txt  tox.ini
.github/: dependabot.yml  labels.yml  renovate.json
.github/workflows/: deploy.yml  lint.yml  release-drafter.yml  test.yml
scripts/: run_command.py
src/norwegianblue/: __init__.py  __main__.py  _cache.py  _data.py  cli.py
tests/: test_cache.py  test_norwegianblue.py  test_norwegianblue_cache.py  test_norwegianblue_print.py
tests/data/: expected_output.py  sample_response.py
