[metadata]
name = norwegianblue
description = CLI to show end-of-life dates for a number of products.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/norwegianblue
author = hugovk
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
keywords =
    end-of-life
    endoflife
    eol
project_urls =
    Source=https://github.com/hugovk/norwegianblue
    Changelog=https://github.com/hugovk/norwegianblue/releases

[options]
packages = find:
install_requires =
    httpx>=0.19
    platformdirs
    prettytable>=2.4.0
    pytablewriter[html]>=0.63
    python-dateutil
    python-slugify
    termcolor
python_requires = >=3.7
package_dir = =src
setup_requires =
    setuptools-scm
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    eol = norwegianblue.cli:main
    norwegianblue = norwegianblue.cli:main

[options.extras_require]
tests =
    freezegun
    pytest
    pytest-cov
    respx>=0.11

[flake8]
max_line_length = 88

[tool:isort]
profile = black

[tool:pytest]
addopts = --color=yes
